{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 31,
  "lineage": "0d43558a-2314-8049-8b1c-d98d7c5bc897",
  "resources": [
    {
      "module": "module.eks.module.vpc_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "Elastic_IPs",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a794f3d39d4a3350",
            "arn": "arn:aws:ec2:us-east-1:381492266480:elastic-ip/eipalloc-0a794f3d39d4a3350",
            "domain": "vpc",
            "id": "eipalloc-0a794f3d39d4a3350",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-165-34-41.compute-1.amazonaws.com",
            "public_ip": "54.165.34.41",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.eks.module.vpc_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "virtual_igw",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492266480:internet-gateway/igw-0f37d05ffa292ff6a",
            "id": "igw-0f37d05ffa292ff6a",
            "owner_id": "381492266480",
            "tags": {
              "Environment": "Dev",
              "Name": "virtual_igw"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "virtual_igw"
            },
            "vpc_id": "vpc-045fe1c96b4ecfe16"
          },
          "dependencies": [
            "module.eks.module.vpc_module.aws_vpc.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a794f3d39d4a3350",
            "association_id": "eipassoc-02630657f1aa3cb6b",
            "connectivity_type": "public",
            "id": "nat-0819a5066d1209b63",
            "network_interface_id": "eni-09b3117f67ca6813a",
            "private_ip": "192.168.0.12",
            "public_ip": "54.165.34.41",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0db7a68370ad0991c",
            "tags": {
              "Environment": "Dev",
              "Name": "virtual_nat_gateway"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "virtual_nat_gateway"
            }
          },
          "dependencies": [
            "module.eks.module.vpc_module.aws_eip.Elastic_IPs",
            "module.eks.module.vpc_module.aws_subnet.virtual_subnet_pub01",
            "module.eks.module.vpc_module.aws_vpc.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "virtual_pri_rt",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492266480:route-table/rtb-0efd1a9294a770ffc",
            "id": "rtb-0efd1a9294a770ffc",
            "owner_id": "381492266480",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0819a5066d1209b63",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "virtual_pri_rt"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "virtual_pri_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-045fe1c96b4ecfe16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc_module.aws_eip.Elastic_IPs",
            "module.eks.module.vpc_module.aws_nat_gateway.nat_gateway",
            "module.eks.module.vpc_module.aws_subnet.virtual_subnet_pub01",
            "module.eks.module.vpc_module.aws_vpc.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "virtual_pub_rt",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492266480:route-table/rtb-0381f4b4ce504ddc0",
            "id": "rtb-0381f4b4ce504ddc0",
            "owner_id": "381492266480",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f37d05ffa292ff6a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "Dev",
              "Name": "virtual_pub_rt"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "virtual_pub_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-045fe1c96b4ecfe16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc_module.aws_internet_gateway.virtual_igw",
            "module.eks.module.vpc_module.aws_vpc.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "virtual_pri_rt_ass01",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf245e0fa8f5b225",
            "route_table_id": "rtb-0efd1a9294a770ffc",
            "subnet_id": "subnet-01607f657d9805cc6"
          },
          "dependencies": [
            "module.eks.module.vpc_module.aws_eip.Elastic_IPs",
            "module.eks.module.vpc_module.aws_nat_gateway.nat_gateway",
            "module.eks.module.vpc_module.aws_route_table.virtual_pri_rt",
            "module.eks.module.vpc_module.aws_subnet.virtual_subnet_pri01",
            "module.eks.module.vpc_module.aws_subnet.virtual_subnet_pub01",
            "module.eks.module.vpc_module.aws_vpc.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "virtual_pri_rt_ass02",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a17b4f88e24ac92",
            "route_table_id": "rtb-0efd1a9294a770ffc",
            "subnet_id": "subnet-0eff032df930de3ae"
          },
          "dependencies": [
            "module.eks.module.vpc_module.aws_eip.Elastic_IPs",
            "module.eks.module.vpc_module.aws_nat_gateway.nat_gateway",
            "module.eks.module.vpc_module.aws_route_table.virtual_pri_rt",
            "module.eks.module.vpc_module.aws_subnet.virtual_subnet_pri02",
            "module.eks.module.vpc_module.aws_subnet.virtual_subnet_pub01",
            "module.eks.module.vpc_module.aws_vpc.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "virtual_pub_rt_ass01",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090faa17f0f650248",
            "route_table_id": "rtb-0381f4b4ce504ddc0",
            "subnet_id": "subnet-0db7a68370ad0991c"
          },
          "dependencies": [
            "module.eks.module.vpc_module.aws_internet_gateway.virtual_igw",
            "module.eks.module.vpc_module.aws_route_table.virtual_pub_rt",
            "module.eks.module.vpc_module.aws_subnet.virtual_subnet_pub01",
            "module.eks.module.vpc_module.aws_vpc.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "virtual_pub_rt_ass02",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d989f2d5d188fb9",
            "route_table_id": "rtb-0381f4b4ce504ddc0",
            "subnet_id": "subnet-06a696f87d3af8d15"
          },
          "dependencies": [
            "module.eks.module.vpc_module.aws_internet_gateway.virtual_igw",
            "module.eks.module.vpc_module.aws_route_table.virtual_pub_rt",
            "module.eks.module.vpc_module.aws_subnet.virtual_subnet_pub02",
            "module.eks.module.vpc_module.aws_vpc.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "virtual_sg",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492266480:security-group/sg-0c588535d3db54bd1",
            "description": "Security group for virtual network",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c588535d3db54bd1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow MySQL traffic",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow PostgreSQL traffic",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "virtual_sg",
            "name_prefix": "",
            "owner_id": "381492266480",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "Dev",
              "Name": "virtual_sg"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "virtual_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-045fe1c96b4ecfe16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.module.vpc_module.aws_vpc.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "virtual_subnet_pri01",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492266480:subnet/subnet-01607f657d9805cc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01607f657d9805cc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492266480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "virtual_subnet_pri01"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "virtual_subnet_pri01"
            },
            "vpc_id": "vpc-045fe1c96b4ecfe16"
          },
          "dependencies": [
            "module.eks.module.vpc_module.aws_vpc.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "virtual_subnet_pri02",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492266480:subnet/subnet-0eff032df930de3ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eff032df930de3ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381492266480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "virtual_subnet_pri02"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "virtual_subnet_pri02"
            },
            "vpc_id": "vpc-045fe1c96b4ecfe16"
          },
          "dependencies": [
            "module.eks.module.vpc_module.aws_vpc.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "virtual_subnet_pub01",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492266480:subnet/subnet-0db7a68370ad0991c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db7a68370ad0991c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492266480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "virtual_subnet_pub01"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "virtual_subnet_pub01"
            },
            "vpc_id": "vpc-045fe1c96b4ecfe16"
          },
          "dependencies": [
            "module.eks.module.vpc_module.aws_vpc.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "virtual_subnet_pub02",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492266480:subnet/subnet-06a696f87d3af8d15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "192.168.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a696f87d3af8d15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "381492266480",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "Dev",
              "Name": "virtual_subnet_pub02"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "virtual_subnet_pub02"
            },
            "vpc_id": "vpc-045fe1c96b4ecfe16"
          },
          "dependencies": [
            "module.eks.module.vpc_module.aws_vpc.virtual_network"
          ]
        }
      ]
    },
    {
      "module": "module.eks.module.vpc_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "virtual_network",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492266480:vpc/vpc-045fe1c96b4ecfe16",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-07935bb05dd49a003",
            "default_route_table_id": "rtb-0638ff575a6244c00",
            "default_security_group_id": "sg-08726645ddd92ece5",
            "dhcp_options_id": "dopt-041d7ad197a95f392",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-045fe1c96b4ecfe16",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0638ff575a6244c00",
            "owner_id": "381492266480",
            "tags": {
              "Environment": "Dev",
              "Name": "virtual_network"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "virtual_network"
            }
          }
        }
      ]
    },
    {
      "module": "module.eks.module.vpc_module",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_endpoint",
      "provider": "module.eks.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:381492266480:vpc-endpoint/vpce-001e216850b8a9bf9",
            "cidr_blocks": [
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-001e216850b8a9bf9",
            "owner_id": "381492266480",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0efd1a9294a770ffc"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Environment": "Dev",
              "Name": "virtual_private_endpoint"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "virtual_private_endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-045fe1c96b4ecfe16"
          },
          "dependencies": [
            "module.eks.module.vpc_module.aws_eip.Elastic_IPs",
            "module.eks.module.vpc_module.aws_nat_gateway.nat_gateway",
            "module.eks.module.vpc_module.aws_route_table.virtual_pri_rt",
            "module.eks.module.vpc_module.aws_subnet.virtual_subnet_pub01",
            "module.eks.module.vpc_module.aws_vpc.virtual_network"
          ]
        }
      ]
    }
  ]
}